# SCM

./: .gitignore  README.md
SCMUlate/: .gitignore  CMakeLists.txt  Makefile  README.md  SCMUlate_tools.h  machine_configuration.h  main_SCMUlate.cpp  proof_of_concept  proof_of_concept.c  run_experiment  todo.md
SCMUlate/CMakeFinds/: FindPAPI.cmake
SCMUlate/apps/: CMakeLists.txt
SCMUlate/apps/allInst/: CMakeLists.txt  myProg.scm
SCMUlate/apps/basecodes/: CMakeLists.txt  MatMulOpenMP.cpp  VectorAdd.cpp
SCMUlate/apps/infinite/: CMakeLists.txt  infinite.scm  mainInfinite.cpp
SCMUlate/apps/infinite/Codelets/: CMakeLists.txt  sleep.cpp  sleep.hpp
SCMUlate/apps/luDecomp/: CMakeLists.txt  debug_luDecomp.scm  luDecomp.scm  mainLuDecomp.cpp  time_log.txt
SCMUlate/apps/luDecomp/Codelets/: CMakeLists.txt  LuDecomp.cpp  LuDecomp.hpp  sparselu.c  sparselu.h
SCMUlate/apps/matrixMult/: CMakeLists.txt  mainMatMul.cpp  matMul128x1280.scm  matMul128x1280gpu.scm  matMul1tile.scm  matMul1tileGPU.scm
SCMUlate/apps/matrixMult/Codelets/: CMakeLists.txt  MatMul.cpp  MatMul.hpp  MatMulOMPoffload.cpp  MatMulOMPoffload.hpp
SCMUlate/apps/matrixMultX/: CMakeLists.txt  mainMatMul.cpp  matMul.scm  matMulGPU.scm  matMulUnrroli.scm  matMulj_k_i.scm  matMulj_k_iGPU.scm
SCMUlate/apps/matrixMultX/Codelets/: CMakeLists.txt  MatMul.cpp  MatMul.hpp  MatMulOMPoffload.cpp  MatMulOMPoffload.hpp
SCMUlate/apps/vectorAddition/: CMakeLists.txt  mainVecAdd.cpp  vectorAddLoop.scm  vectorAddLoopUnrolled.scm  vectorAddLoopUnrolled2.scm  vectorAddNoLoop.scm
SCMUlate/apps/vectorAddition/Codelets/: CMakeLists.txt  vecAdd.cpp  vecAdd.hpp
SCMUlate/include/: SCMUlate_tools.h  machine_configuration.h  register_configuration.h  threads_configuration.h
SCMUlate/include/codelet_model/: README.md  codelet.hpp
SCMUlate/include/common/: README.md  SCMUlate_tools.hpp  instructions.hpp  instructions_def.hpp  stringHelper.hpp  system_config.hpp  threads_configuration.hpp
SCMUlate/include/machines/: README.md  scm_machine.hpp
SCMUlate/include/modules/: README.md  codelet_duplicator.hpp  control_store.hpp  executor.hpp  fault_injection.hpp  fetch_decode.hpp  ilp_controller.hpp  instruction_buffer.hpp  instruction_mem.hpp  memory_interface.hpp  register.hpp  register_config.hpp  scm_machine.hpp  timers_counters.hpp
SCMUlate/include/system_codelets/: cod_print.hpp  system_codelets.hpp
SCMUlate/src/: CMakeLists.txt  registers.c
SCMUlate/src/codelet_model/: CMakeLists.txt  codelet.cpp
SCMUlate/src/common/: CMakeLists.txt  instructions.cpp  stringHelper.cpp
SCMUlate/src/machines/: CMakeLists.txt  scm_machine.cpp
SCMUlate/src/modules/: CMakeLists.txt  codelet_duplicator.cpp  control_store.cpp  executor.cpp  fetch_decode.cpp  ilp_controller.cpp  instruction_mem.cpp  memory_interface.cpp  registers.cpp  scm_machine.cpp  timers_counters.cpp
SCMUlate/src/system_codelets/: CMakeLists.txt  cod_print.cpp
SCMUlate/tests/: CMakeLists.txt
SCMUlate/tests/codelet_model/: CMakeLists.txt  test_codelet.cpp
SCMUlate/tests/modules/: CMakeLists.txt  test_instruction_mem.cpp  test_mem_file.txt  test_register_file.cpp  test_timers_counters.cpp
SCMUlate/tools/: trace.json  traceplot.py
presentations/: HierarchicalAbstractMachine.pptx  HierarchicalTuringMachine.pptx  SequentialCodeletModel--Elevator pitch.pptx
