add_executable(VecAddBaseline VectorAdd.cpp)
add_executable(MatMulOpenMPBaseline MatMulOpenMP.cpp)

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" AND "${CLANG_CXX_FAMILY}" STREQUAL "icpx")
set(PREVIOUS "${CMAKE_CXX_FLAGS}")
set(CMAKE_CXX_FLAGS "-Wall -Wextra -fiopenmp -march=skylake -fiopenmp")
endif()

if (NOT DEFINED NOBLAS)
  set(BLA_VENDOR Intel10_64ilp)
  find_package(BLAS)
  if (NOT BLAS_FOUND)
  message("Could not find MKL")
      set(BLA_VENDOR OpenBLAS)
      find_package(BLAS)
      if (NOT BLAS_FOUND)
          add_definitions("-DNOBLAS")
      else()
          add_definitions("-DBLAS")
      endif()
  else()
      message("Adding MKL Definitions")
      add_definitions("-DMKL")
      add_definitions("-DMKL_ILP64")
      set(MKL_SYCL_LIB "mkl_sycl")
  endif()
else()
  add_definitions("-DNOBLAS")
endif()

add_executable(MatMulMKLBaseline MatMulMKL.cpp)

target_link_libraries (MatMulMKLBaseline ${BLAS_LIBRARIES} ${MKL_SYCL_LIB})