configure_file(matMul1tile.scm ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
#configure_file(vectorAddLoop.scm ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)
#configure_file(vectorAddLoopUnrolled.scm ${CMAKE_CURRENT_BINARY_DIR} COPYONLY)

set(BLA_VENDOR Intel10_64ilp_seq)
find_package(BLAS)
if (NOT BLAS_FOUND)
message("Could not find MKL")
    set(BLA_VENDOR OpenBLAS)
    find_package(BLAS)
    if (NOT BLAS_FOUND)
        message( FATAL_ERROR "Could not find OpenBLAS either!")
    else()
        add_definitions("-DBLAS")
    endif()
else()
    add_definitions("-DMKL")
endif()

add_subdirectory(Codelets)

add_executable(MatMul mainMatMul.cpp)
target_include_directories(MatMul PRIVATE Codelets)

target_link_libraries (MatMul scm_machine mat_mul_cod scm_system_codelets ${BLAS_LIBRARIES})
